TemplateAlfredo.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: YAML template for AWS

Parameters:
  VPC:
    Type: AWS::EC2::VPC::Id
    Default: vpc-03fdd3b33e6bc9591
    Description: ID of Jaime's VPC where I will locate my resources

  PublicSubnet:
    Type: AWS::EC2::Subnet::Id
    Default: subnet-0b2f22ba72d34584b
    Description: ID of the public subnet in eu-west-1b AZ where I will create my EC2 instance

  AvailabilityZone:
    Type: String
    Default: eu-west-1b
    Description: Availability zone where I want to locate my resources

  OwnerTagName: 
    Type: String
    Default: Alfredo_Cuadrado
    Description: Tag to identify the resources that I have created
  
  MyIP:
    Type: String
    Default: 87.221.26.110
    Description: My public IP address


Resources:
 SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: srs-cloud-sandbox-aca-sg
      GroupDescription: Security group for Alfredo's EC2 instance
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref MyIP
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: !Ref MyIP
        - Key: owner
          Value: !Ref OwnerTagName

  EC2: # EC2 for the subnet
    Type: AWS::EC2::Instance
    Properties:
      ImageId: 'ami-0f007bf1d5c770c6e' # Amazon-Linux EC2 type
      InstanceType: t2.micro
      KeyName: clavesalfredo # My key
      SubnetId: !Ref PublicSubnet
      AvailabilityZone: !Ref AvailabilityZone
      SecurityGroupIds: !Ref SecurityGroup
      Tags:
        - Key: Owner
          Value: !Ref OwnerTagName
        - Key: Name
          Value: srs-cloud-sandbox-aca-ec2

  EBS: # EBS volume
    Type: AWS::EC2::Volume
    Properties:
      AvailabilityZone: !Ref AvailabilityZone
      Size: 8
      VolumeType: gp2
      Tags:
        - Key: Owner
          Value: !Ref OwnerTagName
        - Key: Name
          Value: srs-cloud-sandbox-aca-ebs

   EFS: # EFS volume
    Type: AWS::EFS::FileSystem
    Properties:
      PerformanceMode: generalPurpose
      Encrypted: true
      FileSystemTags:
        - Key: Owner
          Value: !Ref OwnerTagName
        - Key: Name
          Value: srs-cloud-sandbox-aca-efs
